src/stylesheets/screen.scss
/* ... */
.ui-autocomplete {
  display: none;
  position: absolute;
  padding: 0;
  margin: 0;
  list-style-type: none;
  -webkit-box-shadow: 1px 2px 6px;
  box-shadow: 1px 2px 6px;
  background-color: #fff;
  color: #221d1f;
  -webkit-transition: left 0.1s ease-in-out;
  transition: left 0.1s ease-in-out;
  overflow-y: scroll;
  max-height: 300px;
}

.ui-menu-item {
  cursor: pointer;
  white-space: nowrap;
  text-overflow: ellipsis;
  padding: 0;
  overflow: hidden;

  a {
    text-decoration: none;
    color: #221d1f;
    width: 100%;
    border: none;
    display: inline-block;
    padding-left: 10px;

    &:hover {
      color: #221d1f;
    }
  }

  .ui-state-active, .ui-state-focus {
    background-color: #444 !important;
    color: #fff !important;
  }
}

.ui-helper-hidden-accessible {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

html {
  font-size: 100%;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
}

body {
  font-size: 18px;
  line-height: 1.6em;
  color: #221d1f;
  margin: 0;
  padding: 0;
  -webkit-font-smoothing: antialiased;
}

@media screen and (max-width: 959px) {
  body main {
    min-height: calc(100vh - 560px);
  }
}

@media screen and (min-width: 960px) and (max-width: 1439px) {
  body main {
    min-height: calc(100vh - 474px);
  }
}

@media screen and (min-width: 1440px) {
  body main {
    min-height: calc(100vh - 378px);
  }
}

.nav {
  padding-top: 11px;
  margin-left: 0;
  border-top: 1px solid #737578;

  li {
    display: inline-block;
    margin-right: 3.6%;
    margin-bottom: 1em;
    font-size: 18px;
    list-style-type: none;
    list-style: none;
    line-height: 1em;
    padding-left: 0;
  }
}

a.no-underline, .reset-links a {
  border-bottom: none;
}

.border {
  border: 1px solid #ccc;
}

ol, p, table {
  margin-bottom: 1.4em;
}

ul {
  margin-bottom: 1.4em;

  &.no-bullet {
    margin-left: 0;

    li {
      padding-left: 0;
      list-style-type: none;
    }
  }
}

ol, ul {
  list-style-position: outside;
  margin-left: 30px;
  display: inline-block;
}

li {
  padding-left: 10px;
}

dd {
  display: inline-block;
}

dt {
  display: inline-block;
  font-weight: 700;
  padding-right: 2px;
}

hr {
  border: 1px solid #f5f5f5;
  line-height: 1px;
  margin: 3em 0;
}

